[WCMSFEQ-94] fixing menu shift due to scrollbars on Windows

--- a/CancerGov/_src/StyleSheets/_MegaMenu.scss
+++ b/CancerGov/_src/StyleSheets/_MegaMenu.scss
@@ -85,7 +85,6 @@
 		border-top: none;
 		background-color: #fff;
 		width: 100%;
-		overflow-y: scroll;
 		max-height:0;
 		opacity: 0;
 		visibility: hidden;
@@ -186,8 +185,11 @@
 
 	/* decrease height of mega menu and add scroll bar */
 	.mega-menu-scroll {
-		//max-height: 300px;
-		overflow: auto;
+		overflow-y: scroll;
+	}
+	html.windows .mega-menu-scroll .sub-nav-group-subwrapper {
+		position:relative;
+		left:10px;
 	}
 
 	/* list item within sub-navigation panel */
